--- a/Orbs_Website/home.html
+++ b/Orbs_Website/home.html
@@ -5,17 +5,36 @@
   <link rel="stylesheet" href="home.css">
 </head>
 <body>
-  <h1><u>Orbs Financial Research:</u><br>Market Updates and Data Analytics</h1>
+
+  <div>
+    <h1 class = "title">
+      Orbs Analytics
+    </h1>
+  </div>
   
-  <a href="market_updates.html">
-    <h2 id="market-updates">Market Updates</h2>
-  </a>
-  <p>This section provides the latest market updates.</p>
+  <div class="main">
+    <h2 class="clickable-h2">
+      <a href="market_updates.html"> Market Updates</a>
+    </h2>
+    <h2 class="clickable-h2">
+      <a href="data_analytics.html"> Data Analytics</a>
+    </h2>
+    <h2 class="clickable-h2">
+      <a href="https://orbsfinresearch.substack.com/" target="_blank" >Substack</a>
+    </h2>
+  </div>
+
+  <div> 
+    <a href="https://orbsfinresearch.substack.com/" target="_blank">
+      <img class="logo" src="logo.png" >
+    </a>
+  </div>
   
-  <a href="data_analytics.html">
-    <h2 id="data-analytics">Data Analytics</h2>
-  </a>
-  <p>This section offers comprehensive data analytics.</p>
-  
+  <div>
+    <a href="https://www.linkedin.com/company/orbs-financial-research/" target="_blank">
+      <img class="linkedin" src="linkedin.png" >
+    </a>
+  </div>
+
 </body>
 </html>
