--- a/Orbs_Website/market_updates.html
+++ b/Orbs_Website/market_updates.html
@@ -5,6 +5,55 @@
   <link rel="stylesheet" href="market_updates.css">
 </head>
 <body>
+    <div class = "title">
+        <h1> 
+            Market Updates
+        </h1>
+    </div>
+
+     
+
+    <div id = "market-updates-table-1">
+        <table>
+            <thead>
+              <tr class = "table-headers">
+                <th>Technology</th>
+                <th>Health & Science</th>
+                <th>Energy</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Data 1</td>
+                <td>Data 2</td>
+                <td>Data 3</td>
+              </tr>
+              <!-- More rows... -->
+            </tbody>
+          </table>
+    </div>
+
+    <div id = "market-updates-table-2">
+        <table>
+            <thead>
+              <tr>
+                <th>Aerospace</th>
+                <th>Retail</th>
+                <th>E-Commerce</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Data 1</td>
+                <td>Data 2</td>
+                <td>Data 3</td>
+              </tr>
+              <!-- More rows... -->
+            </tbody>
+          </table>
+    </div>
+
+
   
 </body>
 </html>
