6/30 Updates (changed design, added sector updates table, prepped for m&a implementation next)

--- a/Orbs_Website/home.html
+++ b/Orbs_Website/home.html
@@ -14,7 +14,13 @@
   
   <div class="main">
     <h2 class="clickable-h2">
+      <a href="sector_updates.html"> Sector Updates</a>
+    </h2>
+    <h2 class="clickable-h2">
       <a href="market_updates.html"> Market Updates</a>
+    </h2>
+    <h2 class="clickable-h2">
+      <a href="data_analytics.html"> M&A Updates</a>
     </h2>
     <h2 class="clickable-h2">
       <a href="data_analytics.html"> Data Analytics</a>
