--- a/Orbs_Website/home.html
+++ b/Orbs_Website/home.html
@@ -20,7 +20,7 @@
       <a href="market_updates.html"> Market Updates</a>
     </h2>
     <h2 class="clickable-h2">
-      <a href="data_analytics.html"> M&A Updates</a>
+      <a href="m&a_updates.html"> M&A Updates</a>
     </h2>
     <h2 class="clickable-h2">
       <a href="data_analytics.html"> Data Analytics</a>
