7/11 - began market_analytics implementation

--- a/Orbs_Website/home.html
+++ b/Orbs_Website/home.html
@@ -17,10 +17,10 @@
       <a href="sector_updates.html"> Sector Updates</a>
     </h2>
     <h2 class="clickable-h2">
-      <a href="market_updates.html"> Market Updates</a>
+      <a href="m&a_updates.html"> M&A Updates</a>
     </h2>
     <h2 class="clickable-h2">
-      <a href="m&a_updates.html"> M&A Updates</a>
+      <a href="market_analysis.html"> Market Analysis</a>
     </h2>
     <h2 class="clickable-h2">
       <a href="data_analytics.html"> Data Analytics</a>
